# bound-simple

./: Changelog.md  README.md  bound-simple.cabal
src/Bound/: Simple.hs
src/Data/Functor/Classes/: Generic.hs
test/Bound/: SimpleSpec.hs
